2010-03-14  Douglas Bates  <bates@stat.wisc.edu>

	* src/*.f: Cleaned up more PRINT statements.  Changed CALL CALFUN
	to F = CALFUN().

	* src/minqa.cpp: Moved the C++ code to this file name (previously
	was bobyqa_cpp.cpp).  Re-arranged order of functions and added
	documentation.  Changed CALFUN to a function incorporating the
	minqi3 output.

	* man/*.Rd: Updates and modifications to examples

	* R/minimizers.R: Added print methods for each of the class

2010-03-13  Douglas Bates  <bates@stat.wisc.edu>

	* src/main.f: removed - R packages should not contain a main
	program

	* src/<many files>: Removed C functions; Changed to C++ with Rcpp;
	Added Makevars.

	* R/<many files>: inlined the foo.control functions, amalgamated
	sources, switched to C++ .Call functions.

	* man/<many files>: Removed docs for newly inlined functions.

	* DESCRIPTION: New version

	* NAMESPACE: UseDynLibs to access names of functions for .Call

2010-03-11  Douglas Bates  <bates@stat.wisc.edu>

	* R/bobyqa.R, src/bobyqa_c.c: Change default argument
	handling and interface between R and C code.  Remove
	bobyqa.control R function.

	* man/bobyqa.Rd: Update to new organization.  Fix R CMD check
	problems.

